fixed contrast issues

--- a/layout/Main/Main.module.sass
+++ b/layout/Main/Main.module.sass
@@ -199,6 +199,7 @@ $breakpoints: (phone: 640px, tablet: 768px, desktop: 1024px) !default
 		display: flex
 		gap: 1.5rem
 		z-index: 1
+		text-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%)
 
 		@include media("<tablet")
 			display: grid
@@ -225,7 +226,7 @@ $breakpoints: (phone: 640px, tablet: 768px, desktop: 1024px) !default
 		i
 			font-size: 1rem
 			color: $--first-color
-			mix-blend-mode: color-burn
+			mix-blend-mode: color-dodge
 
 	&__name
 		font-size: $--normal-font-size
